# rustcraft

./: CLAUDE.md  Cargo.toml
crates/rustcraft/: Cargo.toml
crates/rustcraft/src/: events.rs  main.rs
crates/rustcraft/src/avatar/: mod.rs
crates/rustcraft/src/dropped_item/: mod.rs
crates/rustcraft/src/interaction/: raycast.rs
crates/rustcraft/src/inventory/: mod.rs
crates/rustcraft/src/player/: camera.rs  mod.rs
crates/rustcraft/src/ui/: block_preview.rs  inventory_screen.rs  mod.rs
crates/rustcraft/src/world/: chunk.rs  generation.rs  mod.rs
crates/rustcraft_client/: Cargo.toml
crates/rustcraft_client/src/: app_state.rs  events.rs  lib.rs  network.rs  session.rs
crates/rustcraft_client/src/avatar/: mod.rs
crates/rustcraft_client/src/dropped_item/: mod.rs
crates/rustcraft_client/src/inventory/: mod.rs
crates/rustcraft_dedicated_server/: Cargo.toml
crates/rustcraft_dedicated_server/src/: main.rs
crates/rustcraft_macros/: Cargo.toml
crates/rustcraft_macros/src/: lib.rs
crates/rustcraft_protocol/: Cargo.toml
crates/rustcraft_protocol/src/: block.rs  chunk.rs  game_mode.rs  generation.rs  inventory.rs  lib.rs  physics.rs  player_state.rs  protocol.rs  raycast.rs  tcp_transport.rs  transport.rs
crates/rustcraft_server/: Cargo.toml
crates/rustcraft_server/src/: lib.rs  systems.rs  world_session.rs
src/: events.rs  main.rs
src/dropped_item/: mod.rs
src/interaction/: mod.rs  raycast.rs
src/player/: camera.rs  mod.rs
src/render/: mesh.rs  mod.rs
src/ui/: hotbar.rs  inventory_screen.rs  mod.rs  pause_menu.rs
src/world/: block.rs
(+16 files in other folders)
