[package]
name = "rustcraft"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15"
rustcraft_macros = { path = "../rustcraft_macros" }
rustcraft_protocol = { path = "../rustcraft_protocol" }
rustcraft_server = { path = "../rustcraft_server" }
rustcraft_client = { path = "../rustcraft_client" }
